--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [workspace]
 resolver = "2"
 members = [
+    "triton-client",
     "triton-grpc-client",
 ]
 
 [workspace.dependencies]
+triton-client = { path = "triton-client", version = "0.1.0" }
+triton-grpc-client = { path = "triton-grpc-client", version = "0.1.0" }
+anyhow = { version = "1.0.100" }
 prost = { version = "0.14.1" }
 tonic = { version = "0.14.2", features = ["gzip"] }
 tonic-prost = { version = "0.14.2" }
